made a projection for part 2 - AP

--- a/MultiOutputReg.ipynb
+++ b/MultiOutputReg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2905,12 +2905,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission.to_csv(\"team31-dec1-2.csv\", index=False, header=True)"
+    "#submission.to_csv(\"team31-dec1-2.csv\", index=False, header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2919,7 +2919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3902,7 +3902,7 @@
        "7148        1.475504  21731.822121                   NaN  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3919,7 +3919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4120,6 +4120,387 @@
    "source": [
     "submission"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dec11 = pd.read_csv('team31-dec1-1.csv')\n",
+    "# dec12 = pd.read_csv('team31-dec1-2.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# newsub = test\n",
+    "# newsub = test.drop(columns=['Province_State', 'Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#newsub['Confirmed'] = dec11['Confirmed']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#newsub['Deaths'] = dec12['Deaths']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#newsub.to_csv('team31-dec1-3.csv', index = False, header = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ForecastID</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>127250</td>\n",
+       "      <td>2200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5325</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>202159</td>\n",
+       "      <td>5053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>61738</td>\n",
+       "      <td>810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>720306</td>\n",
+       "      <td>13159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1295</th>\n",
+       "      <td>1295</td>\n",
+       "      <td>147052</td>\n",
+       "      <td>2958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1296</th>\n",
+       "      <td>1296</td>\n",
+       "      <td>90375</td>\n",
+       "      <td>2151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1297</th>\n",
+       "      <td>1297</td>\n",
+       "      <td>15092</td>\n",
+       "      <td>268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1298</th>\n",
+       "      <td>1298</td>\n",
+       "      <td>97875</td>\n",
+       "      <td>1228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1299</th>\n",
+       "      <td>1299</td>\n",
+       "      <td>5181</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1300 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ForecastID  Confirmed  Deaths\n",
+       "0              0     127250    2200\n",
+       "1              1       5325      37\n",
+       "2              2     202159    5053\n",
+       "3              3      61738     810\n",
+       "4              4     720306   13159\n",
+       "...          ...        ...     ...\n",
+       "1295        1295     147052    2958\n",
+       "1296        1296      90375    2151\n",
+       "1297        1297      15092     268\n",
+       "1298        1298      97875    1228\n",
+       "1299        1299       5181      36\n",
+       "\n",
+       "[1300 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newsub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ForecastID</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>127250</td>\n",
+       "      <td>2193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5325</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>202159</td>\n",
+       "      <td>5061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>61738</td>\n",
+       "      <td>810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>720306</td>\n",
+       "      <td>13170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1295</th>\n",
+       "      <td>1295</td>\n",
+       "      <td>147052</td>\n",
+       "      <td>2868</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1296</th>\n",
+       "      <td>1296</td>\n",
+       "      <td>90375</td>\n",
+       "      <td>2181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1297</th>\n",
+       "      <td>1297</td>\n",
+       "      <td>15092</td>\n",
+       "      <td>268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1298</th>\n",
+       "      <td>1298</td>\n",
+       "      <td>97875</td>\n",
+       "      <td>1285</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1299</th>\n",
+       "      <td>1299</td>\n",
+       "      <td>5181</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1300 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ForecastID  Confirmed  Deaths\n",
+       "0              0     127250    2193\n",
+       "1              1       5325      37\n",
+       "2              2     202159    5061\n",
+       "3              3      61738     810\n",
+       "4              4     720306   13170\n",
+       "...          ...        ...     ...\n",
+       "1295        1295     147052    2868\n",
+       "1296        1296      90375    2181\n",
+       "1297        1297      15092     268\n",
+       "1298        1298      97875    1285\n",
+       "1299        1299       5181      37\n",
+       "\n",
+       "[1300 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dec11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "index        48.835117\n",
+       "Confirmed     0.099558\n",
+       "Deaths        0.217597\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MAPE(dec11[['Confirmed', 'Deaths']], validation[['Confirmed', 'Deaths']])*len(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "index        48.835117\n",
+       "Confirmed     0.111295\n",
+       "Deaths        0.216068\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MAPE(dec12[['Confirmed', 'Deaths']], validation[['Confirmed', 'Deaths']])*len(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "index        48.835117\n",
+       "Confirmed     0.099558\n",
+       "Deaths        0.216068\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MAPE(newsub[['Confirmed', 'Deaths']], validation[['Confirmed', 'Deaths']])*len(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -4138,7 +4519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
