testing change metrics and ARIMA + CV model - AP

--- a/MultiOutputReg_Separate.ipynb
+++ b/MultiOutputReg_Separate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#only look at the features in features list\n",
-    "features = ['Confirmed','Incident_Rate']\n",
+    "features = ['Confirmed','Active']\n",
     "num_features = len(features)\n",
     "\n",
     "#stratify by state (into state dictionary)\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,8 +181,8 @@
     "    for d in range(days_to_predict):\n",
     "        #x = knndata.drop(columns=features)\n",
     "        #y = knndata.drop(columns=features)\n",
-    "        x = knndata.drop(['Confirmed', 'Incident_Rate'], axis = 1)\n",
-    "        y = knndata[['Confirmed', 'Incident_Rate']]\n",
+    "        x = knndata.drop(['Confirmed', 'Active'], axis = 1)\n",
+    "        y = knndata[['Confirmed', 'Active']]\n",
     "        toguess = 1\n",
     "        trainx = x.head(len(x))\n",
     "        trainy = y.head(len(y))\n",
@@ -207,14 +207,14 @@
     "        #if d == 0: \n",
     "            #print(knndata)\n",
     "    done = knndata.tail(days_to_predict)\n",
-    "    done = done[['Confirmed', 'Incident_Rate']]\n",
+    "    done = done[['Confirmed', 'Active']]\n",
     "    #print(done)\n",
     "    proj[s] = done"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1440,13 @@
       "Florida day 12\n",
       "608\n",
       "Georgia day 12\n",
-      "609\n",
+      "609\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Hawaii day 12\n",
       "610\n",
       "Idaho day 12\n",
@@ -1448,13 +1454,7 @@
       "Illinois day 12\n",
       "612\n",
       "Indiana day 12\n",
-      "613\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "613\n",
       "Iowa day 12\n",
       "614\n",
       "Kansas day 12\n",
@@ -2446,7 +2446,13 @@
       "Florida day 22\n",
       "1108\n",
       "Georgia day 22\n",
-      "1109\n",
+      "1109\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Hawaii day 22\n",
       "1110\n",
       "Idaho day 22\n",
@@ -2528,13 +2534,7 @@
       "Wyoming day 22\n",
       "1149\n",
       "Alabama day 23\n",
-      "1150\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1150\n",
       "Alaska day 23\n",
       "1151\n",
       "Arizona day 23\n",
@@ -2849,7 +2849,7 @@
     "        projection = proj[j].iloc[i]\n",
     "        print(j, 'day', i)\n",
     "        conf.append(int(projection['Confirmed']))\n",
-    "        ir.append(int(projection['Incident_Rate']))\n",
+    "        ir.append(int(projection['Active']))\n",
     "        print(fid)\n",
     "        fid+=1\n",
     "    \n",
@@ -2858,37 +2858,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "test['Confirmed'] = conf\n",
-    "test['Incident_Rate'] = ir"
+    "test['Active'] = ir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      ForecastID  Confirmed  Deaths  Incident_Rate\n",
-      "0              0     127350      -1           2597\n",
-      "1              1       5318      -1            727\n",
-      "2              2     202197      -1           2777\n",
-      "3              3      61792      -1           2047\n",
-      "4              4     718534      -1           1818\n",
-      "...          ...        ...     ...            ...\n",
-      "1295        1295     145989      -1           1698\n",
-      "1296        1296      94794      -1           1243\n",
-      "1297        1297      14881      -1            814\n",
-      "1298        1298      99358      -1           1693\n",
-      "1299        1299       5139      -1            874\n",
+      "      ForecastID  Confirmed  Deaths  Incident_Rate  Active\n",
+      "0              0     127340      -1          76089   76089\n",
+      "1              1       5311      -1           2993    2993\n",
+      "2              2     202186      -1         166285  166285\n",
+      "3              3      61718      -1           5366    5366\n",
+      "4              4     720284      -1         707121  707121\n",
+      "...          ...        ...     ...            ...     ...\n",
+      "1295        1295     146831      -1         125100  125100\n",
+      "1296        1296      92771      -1          90583   90583\n",
+      "1297        1297      14886      -1           2775    2775\n",
+      "1298        1298      92787      -1           6421    6421\n",
+      "1299        1299       5097      -1            759     759\n",
       "\n",
-      "[1300 rows x 4 columns]\n"
+      "[1300 rows x 5 columns]\n"
      ]
     }
    ],
@@ -2899,7 +2899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2908,7 +2908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2917,7 +2917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3900,7 +3900,7 @@
        "7148        1.475504  21731.822121                   NaN  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3917,7 +3917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3937,7 +3937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3946,7 +3946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3955,30 +3955,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "index            0.037565\n",
-       "Confirmed        0.000081\n",
-       "Incident_Rate    0.000092\n",
+       "index        0.037565\n",
+       "Confirmed    0.000089\n",
+       "Active       0.000736\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "MAPE(submission[['Confirmed', 'Incident_Rate']], validation[['Confirmed', 'Incident_Rate']])"
+    "MAPE(submission[['Confirmed', 'Active']], validation[['Confirmed', 'Active']])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -4012,37 +4012,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>127350</td>\n",
+       "      <td>127340</td>\n",
        "      <td>-1</td>\n",
-       "      <td>2597</td>\n",
+       "      <td>76089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>5318</td>\n",
+       "      <td>5311</td>\n",
        "      <td>-1</td>\n",
-       "      <td>727</td>\n",
+       "      <td>2993</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>202197</td>\n",
+       "      <td>202186</td>\n",
        "      <td>-1</td>\n",
-       "      <td>2777</td>\n",
+       "      <td>166285</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>61792</td>\n",
+       "      <td>61718</td>\n",
        "      <td>-1</td>\n",
-       "      <td>2047</td>\n",
+       "      <td>5366</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>718534</td>\n",
+       "      <td>720284</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1818</td>\n",
+       "      <td>707121</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -4054,37 +4054,37 @@
        "    <tr>\n",
        "      <th>1295</th>\n",
        "      <td>1295</td>\n",
-       "      <td>145989</td>\n",
+       "      <td>146831</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1698</td>\n",
+       "      <td>125100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1296</th>\n",
        "      <td>1296</td>\n",
-       "      <td>94794</td>\n",
+       "      <td>92771</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1243</td>\n",
+       "      <td>90583</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1297</th>\n",
        "      <td>1297</td>\n",
-       "      <td>14881</td>\n",
+       "      <td>14886</td>\n",
        "      <td>-1</td>\n",
-       "      <td>814</td>\n",
+       "      <td>2775</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1298</th>\n",
        "      <td>1298</td>\n",
-       "      <td>99358</td>\n",
+       "      <td>92787</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1693</td>\n",
+       "      <td>6421</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1299</th>\n",
        "      <td>1299</td>\n",
-       "      <td>5139</td>\n",
+       "      <td>5097</td>\n",
        "      <td>-1</td>\n",
-       "      <td>874</td>\n",
+       "      <td>759</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4093,22 +4093,22 @@
       ],
       "text/plain": [
        "      ForecastID  Confirmed  Deaths  Incident_Rate\n",
-       "0              0     127350      -1           2597\n",
-       "1              1       5318      -1            727\n",
-       "2              2     202197      -1           2777\n",
-       "3              3      61792      -1           2047\n",
-       "4              4     718534      -1           1818\n",
+       "0              0     127340      -1          76089\n",
+       "1              1       5311      -1           2993\n",
+       "2              2     202186      -1         166285\n",
+       "3              3      61718      -1           5366\n",
+       "4              4     720284      -1         707121\n",
        "...          ...        ...     ...            ...\n",
-       "1295        1295     145989      -1           1698\n",
-       "1296        1296      94794      -1           1243\n",
-       "1297        1297      14881      -1            814\n",
-       "1298        1298      99358      -1           1693\n",
-       "1299        1299       5139      -1            874\n",
+       "1295        1295     146831      -1         125100\n",
+       "1296        1296      92771      -1          90583\n",
+       "1297        1297      14886      -1           2775\n",
+       "1298        1298      92787      -1           6421\n",
+       "1299        1299       5097      -1            759\n",
        "\n",
        "[1300 rows x 4 columns]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4116,6 +4116,13 @@
    "source": [
     "submission"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -4134,7 +4141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
