arima submission - ap sm

--- a/Changes_Prediction.ipynb
+++ b/Changes_Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3834,7 +3834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -4817,7 +4817,7 @@
        "7148        1.475504  21731.822121                   NaN  "
       ]
      },
-     "execution_count": 371,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4874,6 +4874,89 @@
    ],
    "source": [
     "MAPE(test[['Confirmed', 'Deaths']], validation[['Confirmed', 'Deaths']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Province_State</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Recovered</th>\n",
+       "      <th>Active</th>\n",
+       "      <th>Incident_Rate</th>\n",
+       "      <th>People_Tested</th>\n",
+       "      <th>People_Hospitalized</th>\n",
+       "      <th>Mortality_Rate</th>\n",
+       "      <th>Testing_Rate</th>\n",
+       "      <th>Hospitalization_Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7100</th>\n",
+       "      <td>7100</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>09-01-2020</td>\n",
+       "      <td>127616</td>\n",
+       "      <td>2200</td>\n",
+       "      <td>48028.0</td>\n",
+       "      <td>77388.0</td>\n",
+       "      <td>2602.716398</td>\n",
+       "      <td>958920.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.723922</td>\n",
+       "      <td>19557.083814</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ID Province_State        Date  Confirmed  Deaths  Recovered   Active  \\\n",
+       "7100  7100        Alabama  09-01-2020     127616    2200    48028.0  77388.0   \n",
+       "\n",
+       "      Incident_Rate  People_Tested  People_Hospitalized  Mortality_Rate  \\\n",
+       "7100    2602.716398       958920.0                  NaN        1.723922   \n",
+       "\n",
+       "      Testing_Rate  Hospitalization_Rate  \n",
+       "7100  19557.083814                   NaN  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#  train.loc[train['Province_State'] == s ,:]\n",
+    "validation.loc[validation['Province_State'] == 'Alabama',]"
    ]
   },
   {
