Not much progress -AP

--- a/ARIMA-Submission.ipynb
+++ b/ARIMA-Submission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,17 +32,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Aditya/anaconda3/lib/python3.6/site-packages/statsmodels/tsa/statespace/sarimax.py:966: UserWarning: Non-stationary starting autoregressive parameters found. Using zeros as starting parameters.\n",
-      "  warn('Non-stationary starting autoregressive parameters'\n",
-      "/Users/Aditya/anaconda3/lib/python3.6/site-packages/statsmodels/tsa/statespace/sarimax.py:978: UserWarning: Non-invertible starting MA parameters found. Using zeros as starting parameters.\n",
-      "  warn('Non-invertible starting MA parameters found.'\n"
+      "/Users/Aditya/anaconda3/lib/python3.6/site-packages/statsmodels/base/model.py:568: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  ConvergenceWarning)\n",
+      "/Users/Aditya/anaconda3/lib/python3.6/site-packages/statsmodels/base/model.py:568: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  ConvergenceWarning)\n",
+      "/Users/Aditya/anaconda3/lib/python3.6/site-packages/statsmodels/base/model.py:568: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  ConvergenceWarning)\n",
+      "/Users/Aditya/anaconda3/lib/python3.6/site-packages/statsmodels/base/model.py:568: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  ConvergenceWarning)\n",
+      "/Users/Aditya/anaconda3/lib/python3.6/site-packages/statsmodels/base/model.py:568: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  ConvergenceWarning)\n",
+      "/Users/Aditya/anaconda3/lib/python3.6/site-packages/statsmodels/base/model.py:568: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  ConvergenceWarning)\n"
      ]
     }
    ],
@@ -95,12 +103,13 @@
     "#     forecastC = model_fitC.predict(start = start, end = start + days)\n",
     "\n",
     "    Y= deaths.values\n",
-    "    forecastD = predictARIMA(Y, 5,2,3, days)\n",
+    "    #Y = np.log(Y+0.000000000001)\n",
+    "    forecastD = predictARIMA(Y, 4,2,0, days)\n",
     "#     modelD = ARIMA(Y, order=(5,2,3))\n",
     "#     model_fitD = modelD.fit()\n",
     "#     start = len(Y)\n",
     "#     forecastD = model_fitD.predict(start = start, end = start + days)\n",
-    "\n",
+    "    #forecastD = np.exp(forecastD)\n",
     "    df = {'Confirmed': forecastC, 'Deaths': forecastD}\n",
     "    \n",
     "    proj[s] = pd.DataFrame(df)\n"
@@ -108,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -174,32 +183,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>127264</td>\n",
-       "      <td>2196</td>\n",
+       "      <td>127333</td>\n",
+       "      <td>2207</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>5320</td>\n",
-       "      <td>37</td>\n",
+       "      <td>5319</td>\n",
+       "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>202228</td>\n",
-       "      <td>5068</td>\n",
+       "      <td>202282</td>\n",
+       "      <td>5049</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>61782</td>\n",
+       "      <td>61769</td>\n",
        "      <td>810</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>717653</td>\n",
-       "      <td>13153</td>\n",
+       "      <td>717920</td>\n",
+       "      <td>13124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -210,32 +219,32 @@
        "    <tr>\n",
        "      <th>1295</th>\n",
        "      <td>1295</td>\n",
-       "      <td>143116</td>\n",
-       "      <td>2944</td>\n",
+       "      <td>146064</td>\n",
+       "      <td>2903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1296</th>\n",
        "      <td>1296</td>\n",
-       "      <td>85449</td>\n",
-       "      <td>2121</td>\n",
+       "      <td>86770</td>\n",
+       "      <td>2087</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1297</th>\n",
        "      <td>1297</td>\n",
-       "      <td>13437</td>\n",
-       "      <td>314</td>\n",
+       "      <td>13928</td>\n",
+       "      <td>365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1298</th>\n",
        "      <td>1298</td>\n",
-       "      <td>90330</td>\n",
-       "      <td>1265</td>\n",
+       "      <td>90225</td>\n",
+       "      <td>1194</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1299</th>\n",
        "      <td>1299</td>\n",
-       "      <td>4688</td>\n",
-       "      <td>43</td>\n",
+       "      <td>4579</td>\n",
+       "      <td>37</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -244,22 +253,22 @@
       ],
       "text/plain": [
        "      ForecastID  Confirmed  Deaths\n",
-       "0              0     127264    2196\n",
-       "1              1       5320      37\n",
-       "2              2     202228    5068\n",
-       "3              3      61782     810\n",
-       "4              4     717653   13153\n",
+       "0              0     127333    2207\n",
+       "1              1       5319      36\n",
+       "2              2     202282    5049\n",
+       "3              3      61769     810\n",
+       "4              4     717920   13124\n",
        "...          ...        ...     ...\n",
-       "1295        1295     143116    2944\n",
-       "1296        1296      85449    2121\n",
-       "1297        1297      13437     314\n",
-       "1298        1298      90330    1265\n",
-       "1299        1299       4688      43\n",
+       "1295        1295     146064    2903\n",
+       "1296        1296      86770    2087\n",
+       "1297        1297      13928     365\n",
+       "1298        1298      90225    1194\n",
+       "1299        1299       4579      37\n",
        "\n",
        "[1300 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,11 +280,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#submission.to_csv('team31-dec4-2.csv', index = False, header = True)"
+    "#submission.to_csv('team31-dec4-3.csv', index = False, header = True)"
    ]
   },
   {
